--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/main.css" rel="stylesheet" type="test/css" />
+    <link href="css/main.css" rel="stylesheet" type="text/css" />
     <title>Dylan's Blogs</title>
   <body>
       <h1>Dylan's EDA Blogs</h1>
