--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
         <div class="box">
           <a href="blog/tech_blog-p2.html">Technical Blog Part 2</a>
         </div>  
+        <div class="box">
+          <a href="blog/emotional_intelligance.html">Emotional Intelligance</a>
+        </div>  
   </body>
 </html>
