--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <link href="css/main.css" rel="stylesheet" type="text/css" />
     <title></title>
-    <meta charset="UTF-8">
-    
+    <meta charset="UTF-8">  
   </head>
   <body>
-  
+    <div class="grid">
+        <div class="row">
+          <div class="col-2">2-margin</div>
+          <div class="col-8">Heading</div>
+          <div class="col-2">2-margin</div>
+        </div>
+        <div class="row">
+           <div class="col-2">2-margin</div>
+           <div class="col-2"><a href="blog/blog.html">Reflection Blog</a></div>
+           <div class="col-1">break</div>
+            <div class="col-2"><a href="blog/habitblog.html">Time and Habit Blog</a></div>
+             <div class="col-1">break</div>
+             <div class="col-2"><a href="blog/tech_blog-p1.html">Technical Blog Part 1</a></div>
+             <div class="col-2">2-margin</div>
+        </div>
+        <div class="row">
+           <div class="col-2">2-margin</div>
+           <div class="col-2"><a href="blog/tech_blog-p2.html">Technical Blog Part 2</a></div>
+           <div class="col-1">break</div>
+            <div class="col-2"><a href="blog/emotional_intelligance.html">Emotional Intelligance</a></div>
+             <div class="col-1">break</div>
+             <div class="col-2">1-link</div>
+             <div class="col-2">2-margin</div>
+        </div>
+        <div class="row">
+           <div class="col-2">2-margin</div>
+           <div class="col-2">1-link</div>
+           <div class="col-1">break</div>
+            <div class="col-2">1-link</div>
+             <div class="col-1">break</div>
+             <div class="col-2">1-link</div>
+             <div class="col-2">2-margin</div>
+        </div>
+    </div>
   </body>
 </html>
