--- a/index.html
+++ b/index.html
@@ -2,43 +2,51 @@
 <html>
   <head>
   <link href="css/main.css" rel="stylesheet" type="text/css" />
-    <title></title>
+    <title>Dylan's Blogs</title>
     <meta charset="UTF-8">  
   </head>
   <body>
     <div class="grid">
-        <div class="row">
-          <div class="col-2">2-margin</div>
-          <div class="col-8">Heading</div>
-          <div class="col-2">2-margin</div>
+      <div class="row">
+          <div class="col-2"></div>
+            <div class="col-8"><h1>Dylan's EDA Blogs</h1></div>
+            <div class="col-2"></div>
+      </div>
+      <div class="row">
+           <div class="col-2"></div>
+            <div class="col-2"><div class="box">
+             <a href="blog/blog.html">Reflection Blog</a></div></div>
+          <div class="col-1"></div>
+            <div class="col-2"><div class="box">
+          <a href="blog/habitblog.html">Time and Habit Blog</a></div>
+          </div>
+          <div class="col-1"></div>
+             <div class="col-2"><div class="box">
+              <a href="blog/tech_blog-p1.html">Technical Blog Part 1</a>
+          </div></div>
+             <div class="col-2"></div>
+      </div>
+      <div class="row">
+           <div class="col-2"></div>
+           <div class="col-2"><div class="box">
+          <a href="blog/tech_blog-p2.html">Technical Blog Part 2</a></div></div>
+           <div class="col-1"></div>
+            <div class="col-2"><div class="box">
+          <a href="blog/emotional_intelligance.html">Emotional Intelligance</a>
+        </div></div>
+             <div class="col-1"></div>
+             <div class="col-2"></div>
+             <div class="col-2"></div>
         </div>
-        <div class="row">
-           <div class="col-2">2-margin</div>
-           <div class="col-2"><a href="blog/blog.html">Reflection Blog</a></div>
-           <div class="col-1">break</div>
-            <div class="col-2"><a href="blog/habitblog.html">Time and Habit Blog</a></div>
-             <div class="col-1">break</div>
-             <div class="col-2"><a href="blog/tech_blog-p1.html">Technical Blog Part 1</a></div>
-             <div class="col-2">2-margin</div>
-        </div>
-        <div class="row">
-           <div class="col-2">2-margin</div>
-           <div class="col-2"><a href="blog/tech_blog-p2.html">Technical Blog Part 2</a></div>
-           <div class="col-1">break</div>
-            <div class="col-2"><a href="blog/emotional_intelligance.html">Emotional Intelligance</a></div>
-             <div class="col-1">break</div>
-             <div class="col-2">1-link</div>
-             <div class="col-2">2-margin</div>
-        </div>
-        <div class="row">
-           <div class="col-2">2-margin</div>
-           <div class="col-2">1-link</div>
-           <div class="col-1">break</div>
-            <div class="col-2">1-link</div>
-             <div class="col-1">break</div>
-             <div class="col-2">1-link</div>
-             <div class="col-2">2-margin</div>
-        </div>
+      <div class="row">
+           <div class="col-2"></div>
+           <div class="col-2"></div>
+           <div class="col-1"></div>
+            <div class="col-2"></div>
+             <div class="col-1"></div>
+             <div class="col-2"></div>
+             <div class="col-2"></div>
+      </div>
     </div>
   </body>
 </html>
