--- a/index.html
+++ b/index.html
@@ -2,23 +2,25 @@
 <html>
   <head>
     <title></title>
+    <link href="Skeleton-2.0.4/normalize.css" rel="stylesheet" type="text/css" />
+    <link href="Skeleton-2.0.4/skelton.css" rel="stylesheet" type="text/css" />
     <meta charset="UTF-8">  
   </head>
   <body>
     <div class="grid">
         <div class="row">
-          <div class="col-2"></div>
-          <div class="col-8"></div>
-          <div class="col-2"></div>
+          <div class="two columns"></div>
+          <div class="eight columns"></div>
+          <div class="two columns"></div>
         </div>
         <div class="row">
-           <div class="col-2"></div>
-           <div class="col-2"><a href="blog/blog.html">Reflection Blog</a></div>
-           <div class="col-1"></div>
-            <div class="col-2"><a href="blog/habitblog.html">Time and Habit Blog</a></div>
-             <div class="col-1"></div>
-             <div class="col-2"><a href="blog/tech_blog-p1.html">Technical Blog Part 1</a></div>
-             <div class="col-2"></div>
+           <div class="two.columns"></div>
+           <div class="two.columns"><a href="blog/blog.html">Reflection Blog</a></div>
+           <div class="one.columns"></div>
+            <div class="two.columns"><a href="blog/habitblog.html">Time and Habit Blog</a></div>
+             <div class="one.columns"></div>
+             <div class="two.columns"><a href="blog/tech_blog-p1.html">Technical Blog Part 1</a></div>
+             <div class="two.columns"></div>
         </div>
         <div class="row">
            <div class="col-2"></div>
