--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
   <link href="css/main.css" rel="stylesheet" type="text/css" />
+  <link href="Skeleton-2.0.4/normalize.css" rel="stylesheet" type="text/css" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
+  <link href="Skeleton-2.0.4/skeleton.css" rel="stylesheet" type="text/css" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
     <title>Dylan's Blogs</title>
     <meta charset="UTF-8">  
   </head>
