--- a/index.html
+++ b/index.html
@@ -41,10 +41,20 @@
            </div>
            <div class="two columns"></div>
             <div class="three columns">
-              <a class="button button-primary" href="#####">Soon</a> 
+              <a class="button button-primary" href="blog/c3-meditation-process">Meditation Process</a> 
             </div>
             <div class="two columns"></div>
       </div>
+      <div class="row">
+           <div class="two columns"></div>
+           <div class="three columns">
+             <a class="button button-primary" href="blog/t3-design-to-web-blog.html">Technical Blog Part 2</a>
+           </div>
+           <div class="two columns"></div>
+            <div class="three columns">
+              <a class="button button-primary" href="#####">Soon</a> 
+            </div>
+            <div class="two columns"></div>
     </div>
   </body>
 </html>
