--- a/index.html
+++ b/index.html
@@ -52,9 +52,21 @@
            </div>
            <div class="two columns"></div>
             <div class="three columns">
-              <a class="button button-primary" href="#####">Soon</a> 
+              <a class="button button-primary" href="blog/c4-daily-mindfulness.html">Daily Mindfulness</a>
+            </div>    
+            <div class="two columns"></div>
+      </div>      
+      <div class="row">
+           <div class="two columns"></div>
+           <div class="three columns">
+             <a class="button button-primary" href="blog/t4-javascript-basics.html">Basic JavaScript</a>
+           </div>
+           <div class="two columns"></div>
+            <div class="three columns">
+              <a class="button button-primary" href="blog/#####">Soon</a> 
             </div>
             <div class="two columns"></div>
+        </div>
     </div>
   </body>
 </html>
