--- a/index.html
+++ b/index.html
@@ -63,7 +63,18 @@
            </div>
            <div class="two columns"></div>
             <div class="three columns">
-              <a class="button button-primary" href="blog/#####">Soon</a> 
+              <a class="button button-primary" href="blog/c5-selfconfidence.html">Self Confidence</a> 
+            </div>
+            <div class="two columns"></div>
+        </div>
+        <div class="row">
+           <div class="two columns"></div>
+           <div class="three columns">
+             <a class="button button-primary" href="blog/ #####">soon</a>
+           </div>
+           <div class="two columns"></div>
+            <div class="three columns">
+              <a class="button button-primary" href="blog/ ####">soon</a> 
             </div>
             <div class="two columns"></div>
         </div>
