--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="row">
            <div class="two columns"></div>
            <div class="three columns">
-             <a class="button button-primary" href="blog/ #####">soon</a>
+             <a class="button button-primary" href="blog/t5-problem-solving.html">Problem Solving</a>
            </div>
            <div class="two columns"></div>
             <div class="three columns">
