--- a/index.html
+++ b/index.html
@@ -74,6 +74,17 @@
            </div>
            <div class="two columns"></div>
             <div class="three columns">
+              <a class="button button-primary" href="blog/t6-js-language.html">JS Language</a> 
+            </div>
+            <div class="two columns"></div>
+        </div>
+        <div class="row">
+           <div class="two columns"></div>
+           <div class="three columns">
+             <a class="button button-primary" href="blog/ ###">soon</a>
+           </div>
+           <div class="two columns"></div>
+            <div class="three columns">
               <a class="button button-primary" href="blog/ ####">soon</a> 
             </div>
             <div class="two columns"></div>
